--- a/sentiment-analysis.yml
+++ b/sentiment-analysis.yml
@@ -1,10 +1,10 @@
 version: 1.0
 provider:
   name: openfaas
-  gateway: https://faas.pardinas.co.uk
+  gateway: http://127.0.0.1:8080
 functions:
   sentiment-analysis:
     lang: python3
     handler: ./sentiment-analysis
-    image: docker-reg.pardinas.co.uk/sentiment-analysis:latest
+    image: sentiment-analysis:latest
 
